--- a/publicatons.html
+++ b/publicatons.html
@@ -21,13 +21,27 @@
     <main>
         <section id="publications">
             <h2>Publications</h2>
-            <div class="carousel">
-                <button class="prev">Prev</button>
-                <div class="carousel-item">Publication 1</div>
-                <div class="carousel-item">Publication 2</div>
-                <div class="carousel-item">Publication 3</div>
-                <button class="next">Next</button>
-            </div>
+            <ul class="publication-list">
+                <li>Sruthy Anand, Dhanesh Raj, A.M. Abhishek Sai, Sethuraman N Rao, and Maneesha V Ramesh. 2023. "<i>Techno-Social Synergy for Disaster Resilience in Coastal Communities: A Sustainable Approach</i>", In Proceedings of the 24th International Conference on Distributed Computing and Networking (ICDCN '23). <a href="https://doi.org/10.1145/3571306.3571437">Paper</a></li>
+                <li>D. Raj, M. V. Ramesh and S. N. Rao "<i>Link Quality Measurements for Marine Vehicular to Infrastructure Network (V2I)</i>", 2020 International Conference on COMmunication Systems & NETworkS (COMSNETS), Bengaluru, India, 2020. <a href="https://ieeexplore.ieee.org/document/9027379">Paper</a></li>
+                <li>D Raj "<i>Performance Evaluation of QoS in Marine Vehicle to Infrastructure (V2I) Network</i>", 2020 International Conference on COMmunication Systems & NETworkS (COMSNETS), Bengaluru, India, 2020. <a href="https://ieeexplore.ieee.org/document/9027424">Paper</a></li>
+                <li>Ramesh, M.V., Prabha, R., Thirugnanam, H. et al. Achieving sustainability through smart city applications: protocols, systems and solutions using IoT and wireless sensor network. CSIT 8, 213–230 (2020). <a href="https://doi.org/10.1007/s40012-020-00285-5">Paper</a></li>
+                <li>D. Raj, S. S. Lekshmi, B. B. Nair and S. Ponnekanti, "<i>Effective Gi-LAN optimisation towards Hardening the 5G Service Provider Platform</i>", 2019 International Conference on Wireless Communications Signal Processing and Networking (WiSPNET). <a href="https://ieeexplore.ieee.org/document/9032776">Paper</a></li>
+                <li>S. S. Lekshmi, M. S. Anjana, B. B. Nair, D. Raj and S. Ponnekanti, "<i>Framework for Generic Design of Massive IoT Slice in 5G</i>", 2019 International Conference on Wireless Communications Signal Processing and Networking (WiSPNET). <a href="https://ieeexplore.ieee.org/abstract/document/9032878">Paper</a></li>
+                <li>S. L. Lekshmi, D. Raj and S. Ponnekanti, "<i>Connectivity Platform to Deliver Sync as a Service for 5G Digital Enterprise</i>", 2019 International Conference on Wireless Communications Signal Processing and Networking (WiSPNET). <a href="https://ieeexplore.ieee.org/document/9032866">Paper</a></li>
+                <li>S. N. Rao, D. Raj, V. Parthasarathy, S. Aiswarya, M. V. Ramesh and V. Rangan, "A novel solution for high speed internet over the oceans," IEEE INFOCOM 2018 - IEEE Conference on Computer Communications Workshops (INFOCOM WKSHPS), Honolulu, HI, USA, 2018, pp. 906-912. <a href="https://doi.org/10.1109/INFCOMW.2018.8406862">Paper</a></li>
+                <li>D Raj, S. Duttagupta, Ramesh M.V "<i>Delay Tolerant Routing Protocol for Heterogeneous Marine Vehicular Mobile Ad-hoc Network</i>", 2017 IEEE International Conference on Pervasive Computing and Communication Workshops (PerCom 2017). <a href="https://ieeexplore.ieee.org/document/7917607">Paper</a></li>
+                <li>Dhanesh Raj, Vickram Parthasarathy, Sethuraman N. Rao, and Maneesha V. Ramesh. 2017, "<i>Performance Assessment of an Extremely Challenged Mobile Infrastructure Network over the Oceans</i>." In Proceedings of the 18th International Conference on Distributed Computing and Networking (ICDCN ’17). <a href="https://doi.org/10.1145/3007748.3018284">Paper</a></li>
+                <li>L. Rajagopal and D. Raj, "<i>Study of synchronization facets for 5G small cell use case scenario</i>", 2017 2nd International Conference on Communication and Electronics Systems (ICCES). <a href="https://ieeexplore.ieee.org/document/8321133">Paper</a></li>
+                <li>S. Swetha and D. Raj, "<i>Optimized video content delivery over 5G networks</i>", 2017 2nd International Conference on Communication and Electronics Systems (ICCES). <a href="https://ieeexplore.ieee.org/document/8321232">Paper</a></li>
+                <li>H. S. Jennath, Nandesh Nair, Sethuraman Rao, Dhanesh Raj, Sujatha Narayanan, and Dilip Krishnaswamy, "A Resilient Self-Organizing Offshore Communication Network for Fishermen." In Proceedings of the 18th International Conference on Distributed Computing and Networking (ICDCN ’17). <a href="https://doi.org/10.1145/3007748.3018283">Paper</a></li>
+                <li>S. N. Rao, D. Raj, S. Aiswarya and S. Unni "Realizing cost-effective marine internet for fishermen", 2016 14th International Symposium on Modeling and Optimization in Mobile, Ad Hoc, and Wireless Networks (WiOpt), Tempe, AZ, 2016. <a href="https://ieeexplore.ieee.org/document/7492904">Paper</a></li>
+                <li>Unni. S, Raj. D, Rao. S, Kalyan P.S "<i>Performance Measurement and Analysis of Long Range Wi-Fi Network for Over-the-Sea Communication</i>", Modeling and Optimization in Mobile, Ad Hoc, and Wireless Networks (WiOpt 2015), 13th International Symposium on, 25-29 May 2015. <a href="https://ieeexplore.ieee.org/document/7474345">Paper</a></li>
+                <li>Jennath H.S, Raj. D, Rao. S, Kaimal. A "Comparative Study of Backhaul Options for Communication at Sea", Sixth International Conference on Advances in Communication, Network, and Computing – CNC 2015, Mar 28-29, 2015 in Chennai, India. <a href="https://www.amrita.edu/publication/comparative-study-of-backhaul-options-for-communication-at-sea/">Paper</a></li>
+                <li>Nair B.D, Raj. D, Rao. S "Security Considerations in a Marine Communication Network for Fishermen", AIRCC International Journal on Cybernetics & Informatics(IJCI) – CNC 2015, Mar 28-29, 2015 in Chennai, India. <a href="https://airccse.org/journal/ijci/papers/4215ijci02.pdf">Paper</a></li>
+                <li>Maneesha V. Ramesh, Dhanesh Raj, and N. Dilraj "<i>An Assistive Device for Managing Urinary Incontinence</i>", In Proceedings of the 6th IBM Collaborative Academia Research Exchange Conference (I-CARE) on I-CARE 2014 (I-CARE 2014). ACM, New York, NY, USA, Article 3, 4 pages. <a href="https://doi.org/10.1145/2662117.2662120">Paper</a></li>
+                <li>Maneesha V Ramesh, Dhanesh Raj, Dr. Sanjeevan K V, Dilraj N "<i>Design of Wireless Real Time Artificial Sphincter Control System for Urinary Incontinence</i>", International Symposium on Technology Management and Emerging Technologies, May 27-28, 2014. <a href="https://ieeexplore.ieee.org/document/6936475">Paper</a></li>
+            </ul>
         </section>
     </main>
     <footer>
