--- a/research-interests.html
+++ b/research-interests.html
@@ -23,6 +23,19 @@
             <h2>Research Interests</h2>
             <!-- Add content for research interests -->
         </section>
+        <section id="teaching">
+            <h2>Teaching</h2>
+            <ul>
+                <li>18WN714 - 5G Small Cells - TA</li>
+                <li>15CSE370 - Wireless and Mobile Communication - Course Faculty</li>
+                <li>18WN624 - Mobile Communication Networks - TA</li>
+                <li>18WN626 - Internet of Things: Architecture and System Design - TA</li>
+                <li>16WN717 - Cloud Computing and Internet of Things - TA</li>
+                <li>16WN624 - Mobile Communication Networks - TA</li>
+                <li>16WN713 - 4G Mobile Broadband and Small Cell Networks - TA</li>
+                <li>16WN625 - Research Learning and Problem Formulation - TA</li>
+            </ul>
+        </section>
     </main>
     <footer>
         <p>&copy; 2024 Ariadne Snyder. All Rights Reserved.</p>
