--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 </div>
             </div>
             <div class="intro-right">
-                <h2>About Me </h2>
-                <p>Currently pursuing my Ph.D. in Computer Engineering under Dr. Maneesha V Ramesh with research interests in  wireless networks and pervasive computing, specifically Quality of Service (QoS) in marine 5G heterogeneous networks. </p>
+                <h2>About Me</h2>
+                <p>Currently pursuing my Ph.D. in Computer Engineering under Dr. Maneesha V Ramesh with research interests in wireless networks and pervasive computing, specifically Quality of Service (QoS) in marine 5G heterogeneous networks.</p>
                 <div class="scholar-links">
                     <a href="https://scholar.google.com/citations?user=CSB7DU0AAAAJ"><img src="./google-scholar-icon.png" alt="Google Scholar"></a>
                     <a href="https://www.researchgate.net/profile/Dhanesh-Raj"><img src="./researchgate-icon.png" alt="ResearchGate"></a>
@@ -57,15 +57,44 @@
                 </div>
             </div>
         </section>
+        
+        <section id="experience">
+            <h2>Experience</h2>
+            <ul>
+                <li>
+                    <h3>PhD Student (2017 -- 2024)</h3>
+                    <p>Center for Wireless Networks & Applications, Amrita Vishwa Vidyapeetham, Kerala, India</p>
+                    <ul>
+                        <li>OceanNet – in developing Public Safety Networks and Mission Critical Services for fishermen based on real time functional deployment of a mobile infrastructure for offshore communications and networking in the coastal region targeting to ensure effective communication whilst tackling natural disasters and hazards.</li>
+                        <li>Thesis Title - "<em>Service Provisioning in Resource Constrained Marine Vehicular IoT Networks in Extreme Environment</em>"</li>
+                    </ul>
+                </li>
+                <li>
+                    <h3>ICM Research Student (Feb -- July 2016)</h3>
+                    <p>Dept. of Information Engineering and Computer Science, University of Trento, Italy</p>
+                    <ul>
+                        <li>Research activity as part of Erasmus+ International Credit Mobility (ICM) student exchange, focusing on theoretical analysis and simulation of a DTN Architecture for Fishing Vessels; Cooperative Device-to-Device Communication and Resource Allocation in Cognitive Radio.</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+
+        <section id="education">
+            <h2>Education</h2>
+            <ul>
+                <li>
+                    <h3>Masters in Wireless Networks and Applications (2012 -- 2014)</h3>
+                    <p>Amrita Vishwa Vidyapeetham, Amritapuri, Kerala <strong>CGPA: 8/10</strong></p>
+                </li>
+                <li>
+                    <h3>Bachelors in Engineering (2004 -- 2008)</h3>
+                    <p>Anna University, Chennai - India <strong>CGPA: 8.2/10</strong></p>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer>
         <p>&copy; 2024 Dhanesh Raj All Rights Reserved.</p>
-       <!-- <div class="social-media">-->
-            <!--<a href="https://www.linkedin/dhanesh.raj"><img src="./linkedin-icon.png" alt="LinkedIn"></a>-->
-           <!-- <a href="https://www.facebook/dhanesh.raj"><img src="./facebook-icon.png" alt="Facebook"></a>-->
-            <!--<a href="https://www.instagram/dhanesh.raj"><img src="./instagram-icon.png" alt="Instagram"></a>-->
-            <!--<a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="./github-icon.png" alt="GitHub"></a>-->
-      <!--  </div>-->
     </footer>
 </body>
 </html>
