--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Personal Resume</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <body>
     <header>
@@ -23,9 +24,9 @@
         <section class="intro">
             <div class="intro-left">
                 <img src="profile.jpg" alt="Profile Picture" class="profile-img">
-                <h1>Dhanesh Raj</h1>
+                <h1 class="animate__animated animate__slideInDown">Dhanesh Raj</h1>
                 <p>Senior Research Associate</p>
-                <button>Email me</button>
+                <button class="btn">Email me</button>
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/dhaneshraj/"><i class="fab fa-linkedin"></i></a>
                     <a href="https://www.facebook.com/imdhaneshraj"><i class="fab fa-facebook"></i></a>
@@ -53,8 +54,8 @@
                     <a href="https://orcid.org/0000-0002-0558-1719"><i class="fab fa-orcid"></i></a>
                 </div>
                 <div class="resume-portfolio-buttons">
-                    <a href="./resume.pdf" class="btn">Resume</a>
-                    <a href="#portfolio" class="btn">Portfolio</a>
+                    <a href="./resume.pdf" class="btn glow">Resume</a>
+                    <a href="#portfolio" class="btn glow">Portfolio</a>
                 </div>
                 <section id="experience">
                     <h2>Experience</h2>
