--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                 <img src="profile.jpg" alt="Profile Picture" class="profile-img">
                 <h1 class="animate__animated animate__slideInDown">Dhanesh Raj</h1>
                 <p>Senior Research Associate</p>
-                <button class="btn">Email me</button>
-                 <a href="mailto:dhaneshraj@am.amrita.edu" class="btn">Email me</a>
+                <a href="mailto:mailid@gmail.com" class="btn">Email me</a>
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/dhaneshraj/"><i class="fab fa-linkedin"></i></a>
                     <a href="https://www.facebook.com/imdhaneshraj"><i class="fab fa-facebook"></i></a>
