--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
                     <a href="https://www.instagram.com/dhanesh.raj/"><i class="fab fa-instagram"></i></a>
                     <a href="https://github.com/Dhanesh-raj"><i class="fab fa-github"></i></a>
                 </div>
+                <!--dhanesh-->
+                <h1 class="block-effect" style="--td: 1.2s">
+                    <div class="block-reveal" style="--bc: #4040bf; --d: .1s">Block</div>
+                    <div class="block-reveal" style="--bc: #bf4060; --d: .5s">Revealing Effect</div>
+                </h1>
+                <div class="info">
+                    <p>Change --td (total duration) to increase/decrease the time of the effect in HTML panel.</p>
+                </div>
+                <!--dhanesh-->
+<a href="https://abubakersaeed.netlify.app/designs/d12-block-revealing-effect" class="abs-site-link" rel="nofollow noreferrer" target="_blank">abs/designs/d12-block-revealing-effect</a>
                 <div class="contact-info">
                     <p>Address:<br>
                        2nd Floor, Center for Wireless Networks and Applications<br>
