--- a/index.html
+++ b/index.html
@@ -12,11 +12,41 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#publications">Publications</a></li>
-                <li><a href="#research-interests">Research Interests</a></li>
-                <li><a href="#teaching">Teaching</a></li>
-                <li><a href="#awards">Awards/Honor/Services</a></li>
+                <li>
+                    <h1 class="block-effect" style="--td: 1.2s">
+                        <div class="block-reveal" style="--bc: #4040bf; --d: .1s">
+                            <a href="#projects">Projects</a>
+                        </div>
+                    </h1>
+                </li>
+                <li>
+                    <h1 class="block-effect" style="--td: 1.2s">
+                        <div class="block-reveal" style="--bc: #bf4060; --d: .5s">
+                            <a href="#publications">Publications</a>
+                        </div>
+                    </h1>
+                </li>
+                <li>
+                    <h1 class="block-effect" style="--td: 1.2s">
+                        <div class="block-reveal" style="--bc: #408040; --d: .9s">
+                            <a href="#research-interests">Research Interests</a>
+                        </div>
+                    </h1>
+                </li>
+                <li>
+                    <h1 class="block-effect" style="--td: 1.2s">
+                        <div class="block-reveal" style="--bc: #bf8040; --d: 1.3s">
+                            <a href="#teaching">Teaching</a>
+                        </div>
+                    </h1>
+                </li>
+                <li>
+                    <h1 class="block-effect" style="--td: 1.2s">
+                        <div class="block-reveal" style="--bc: #8040bf; --d: 1.7s">
+                            <a href="#awards">Awards/Honor/Services</a>
+                        </div>
+                    </h1>
+                </li>
             </ul>
         </nav>
     </header>
@@ -33,16 +63,6 @@
                     <a href="https://www.instagram.com/dhanesh.raj/"><i class="fab fa-instagram"></i></a>
                     <a href="https://github.com/Dhanesh-raj"><i class="fab fa-github"></i></a>
                 </div>
-                <!--dhanesh-->
-                <h1 class="block-effect" style="--td: 1.2s">
-                    <div class="block-reveal" style="--bc: #4040bf; --d: .1s">Block</div>
-                    <div class="block-reveal" style="--bc: #bf4060; --d: .5s">Revealing Effect</div>
-                </h1>
-                <div class="info">
-                    <p>Change --td (total duration) to increase/decrease the time of the effect in HTML panel.</p>
-                </div>
-                <!--dhanesh-->
-<a href="https://abubakersaeed.netlify.app/designs/d12-block-revealing-effect" class="abs-site-link" rel="nofollow noreferrer" target="_blank">abs/designs/d12-block-revealing-effect</a>
                 <div class="contact-info">
                     <p>Address:<br>
                        2nd Floor, Center for Wireless Networks and Applications<br>
