--- a/index.html
+++ b/index.html
@@ -12,41 +12,11 @@
     <header>
         <nav>
             <ul>
-                <li>
-                    <h1 class="block-effect" style="--td: 1.2s">
-                        <div class="block-reveal" style="--bc: #4040bf; --d: .1s">
-                            <a href="#projects">Projects</a>
-                        </div>
-                    </h1>
-                </li>
-                <li>
-                    <h1 class="block-effect" style="--td: 1.2s">
-                        <div class="block-reveal" style="--bc: #bf4060; --d: .5s">
-                            <a href="#publications">Publications</a>
-                        </div>
-                    </h1>
-                </li>
-                <li>
-                    <h1 class="block-effect" style="--td: 1.2s">
-                        <div class="block-reveal" style="--bc: #408040; --d: .9s">
-                            <a href="#research-interests">Research Interests</a>
-                        </div>
-                    </h1>
-                </li>
-                <li>
-                    <h1 class="block-effect" style="--td: 1.2s">
-                        <div class="block-reveal" style="--bc: #bf8040; --d: 1.3s">
-                            <a href="#teaching">Teaching</a>
-                        </div>
-                    </h1>
-                </li>
-                <li>
-                    <h1 class="block-effect" style="--td: 1.2s">
-                        <div class="block-reveal" style="--bc: #8040bf; --d: 1.7s">
-                            <a href="#awards">Awards/Honor/Services</a>
-                        </div>
-                    </h1>
-                </li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#publications">Publications</a></li>
+                <li><a href="#research-interests">Research Interests</a></li>
+                <li><a href="#teaching">Teaching</a></li>
+                <li><a href="#awards">Awards/Honor/Services</a></li>
             </ul>
         </nav>
     </header>
