--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     <main>
         <section class="intro">
             <div class="intro-left">
-                <img src="profile.jpg" alt="Profile Picture" class="profile-img">
+                <img src="profile.jpg" alt="Profile Picture of Dhanesh Raj" class="profile-img">
                 <h1 class="animate__animated animate__slideInDown">Dhanesh Raj</h1>
                 <p>Senior Research Associate</p>
                 <a href="mailto:mailid@gmail.com" class="btn">Email me</a>
                 <div class="social-icons">
-                    <a href="https://www.linkedin.com/in/dhaneshraj/"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://www.facebook.com/imdhaneshraj"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/dhanesh.raj/"><i class="fab fa-instagram"></i></a>
-                    <a href="https://github.com/Dhanesh-raj"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/dhaneshraj/" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.facebook.com/imdhaneshraj" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/dhanesh.raj/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://github.com/Dhanesh-raj" aria-label="GitHub"><i class="fab fa-github"></i></a>
                 </div>
                 <div class="contact-info">
                     <p>Address:<br>
@@ -49,9 +49,9 @@
                 <h2>About Me</h2>
                 <p>Currently pursuing my Ph.D. in Computer Engineering under Dr. Maneesha V Ramesh with research interests in wireless networks and pervasive computing, specifically Quality of Service (QoS) in marine 5G heterogeneous networks.</p>
                 <div class="scholar-links">
-                    <a href="https://scholar.google.com/citations?user=CSB7DU0AAAAJ"><i class="fas fa-graduation-cap"></i></a>
-                    <a href="https://www.researchgate.net/profile/Dhanesh-Raj"><i class="fab fa-researchgate"></i></a>
-                    <a href="https://orcid.org/0000-0002-0558-1719"><i class="fab fa-orcid"></i></a>
+                    <a href="https://scholar.google.com/citations?user=CSB7DU0AAAAJ" aria-label="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+                    <a href="https://www.researchgate.net/profile/Dhanesh-Raj" aria-label="ResearchGate"><i class="fab fa-researchgate"></i></a>
+                    <a href="https://orcid.org/0000-0002-0558-1719" aria-label="ORCID"><i class="fab fa-orcid"></i></a>
                 </div>
                 <div class="resume-portfolio-buttons">
                     <a href="./resume.pdf" class="btn glow">Resume</a>
@@ -64,7 +64,7 @@
                             <h3>PhD Student (2017 -- 2024)</h3>
                             <p>Center for Wireless Networks & Applications, Amrita Vishwa Vidyapeetham, Kerala, India</p>
                             <ul>
-                                <li>OceanNet – in developing Public Safety Networks and Mission Critical Services for fishermen based on real time functional deployment of a mobile infrastructure for offshore communications and networking in the coastal region targeting to ensure effective communication whilst tackling natural disasters and hazards.</li>
+                                <li>OceanNet – in developing Public Safety Networks and Mission Critical Services for fishermen based on real-time functional deployment of a mobile infrastructure for offshore communications and networking in the coastal region targeting to ensure effective communication whilst tackling natural disasters and hazards.</li>
                                 <li>Thesis Title - "<em>Service Provisioning in Resource Constrained Marine Vehicular IoT Networks in Extreme Environment</em>"</li>
                             </ul>
                         </li>
@@ -97,7 +97,7 @@
         <p>&copy; 2024 Dhanesh Raj All Rights Reserved.</p>
     </footer>
 
-    <script>
+    <script defer>
         // Add animation to social icons
         document.querySelectorAll('.social-icons a').forEach(link => {
             link.addEventListener('mouseover', () => {
