--- a/index.html
+++ b/index.html
@@ -97,16 +97,6 @@
         <p>&copy; 2024 Dhanesh Raj All Rights Reserved.</p>
     </footer>
 
-    <script defer>
-        // Add animation to social icons
-        document.querySelectorAll('.social-icons a').forEach(link => {
-            link.addEventListener('mouseover', () => {
-                link.querySelector('i').classList.add('fa-bounce');
-            });
-            link.addEventListener('mouseout', () => {
-                link.querySelector('i').classList.remove('fa-bounce');
-            });
-        });
-    </script>
+    <script defer src="script.js"></script>
 </body>
 </html>
