--- a/index.html
+++ b/index.html
@@ -22,29 +22,31 @@
     </header>
     <main>
         <section class="intro">
-            <div class="intro-left">
-                <img src="profile.jpg" alt="Profile Picture of Dhanesh Raj" class="profile-img">
-                <h1 class="animate__animated animate__slideInDown">Dhanesh Raj</h1>
-                <p>Senior Research Associate</p>
-                <a href="mailto:mailid@gmail.com" class="btn">Email me</a>
-                <div class="social-icons">
-                    <a href="https://www.linkedin.com/in/dhaneshraj/" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://www.facebook.com/imdhaneshraj" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/dhanesh.raj/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="https://github.com/Dhanesh-raj" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                </div>
-                <div class="contact-info">
-                    <p>Address:<br>
-                       2nd Floor, Center for Wireless Networks and Applications<br>
-                       Amrita Vishwa Vidyapeetham<br>
-                       Amritapuri Campus</p>
-                    <p>Email:<br>
-                       <a href="mailto:dhaneshraj@am.amrita.edu">dhaneshraj@am.amrita.edu</a><br>
-                       <a href="mailto:dhaneshraj@ieee.org">dhaneshraj@ieee.org</a></p>
-                    <p>Phone Number:<br>
-                       +91 9846309356</p>
-                </div>
-            </div>
+<section class="intro">
+    <div class="intro-left">
+        <img src="profile.jpg" alt="Profile Picture of Dhanesh Raj" class="profile-img" loading="lazy">
+        <h1 class="animate__animated animate__slideInDown">Dhanesh Raj</h1>
+        <p>Senior Research Associate</p>
+        <a href="mailto:mailid@gmail.com" class="btn">Email me</a>
+        <div class="social-icons">
+            <a href="https://www.linkedin.com/in/dhaneshraj/" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/imdhaneshraj" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/dhanesh.raj/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/Dhanesh-raj" aria-label="GitHub"><i class="fab fa-github"></i></a>
+        </div>
+        <div class="contact-info">
+            <p>Address:<br>
+               2nd Floor, Center for Wireless Networks and Applications<br>
+               Amrita Vishwa Vidyapeetham<br>
+               Amritapuri Campus</p>
+            <p>Email:<br>
+               <a href="mailto:dhaneshraj@am.amrita.edu">dhaneshraj@am.amrita.edu</a><br>
+               <a href="mailto:dhaneshraj@ieee.org">dhaneshraj@ieee.org</a></p>
+            <p>Phone Number:<br>
+               +91 9846309356</p>
+        </div>
+    </div>
+</section>
             <div class="intro-right">
                 <h2>About Me</h2>
                 <p>Currently pursuing my Ph.D. in Computer Engineering under Dr. Maneesha V Ramesh with research interests in wireless networks and pervasive computing, specifically Quality of Service (QoS) in marine 5G heterogeneous networks.</p>
