--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Resume</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.min.css"> <!-- Minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
@@ -22,34 +22,17 @@
     </header>
     <main>
         <section class="intro">
-<section class="intro">
-    <div class="intro-left">
-        <img src="profile.jpg" alt="Profile Picture of Dhanesh Raj" class="profile-img" loading="lazy">
-        <h1 class="animate__animated animate__slideInDown">Dhanesh Raj</h1>
-        <p>Senior Research Associate</p>
-        <a href="mailto:mailid@gmail.com" class="btn">Email me</a>
-        <div class="social-icons">
-            <a href="https://www.linkedin.com/in/dhaneshraj/" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-            <a href="https://www.facebook.com/imdhaneshraj" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-            <a href="https://www.instagram.com/dhanesh.raj/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://github.com/Dhanesh-raj" aria-label="GitHub"><i class="fab fa-github"></i></a>
-        </div>
-        <div class="contact-info">
-            <p>Address:<br>
-               2nd Floor, Center for Wireless Networks and Applications<br>
-               Amrita Vishwa Vidyapeetham<br>
-               Amritapuri Campus</p>
-            <p>Email:<br>
-               <a href="mailto:dhaneshraj@am.amrita.edu">dhaneshraj@am.amrita.edu</a><br>
-               <a href="mailto:dhaneshraj@ieee.org">dhaneshraj@ieee.org</a></p>
-            <p>Phone Number:<br>
-               +91 9846309356</p>
-        </div>
-    </div>
-</section>
-            <div class="intro-right">
-                <h2>About Me</h2>
-                <p>Currently pursuing my Ph.D. in Computer Engineering under Dr. Maneesha V Ramesh with research interests in wireless networks and pervasive computing, specifically Quality of Service (QoS) in marine 5G heterogeneous networks.</p>
+            <div class="intro-left">
+                <img src="profile.jpg" alt="Profile Picture of Dhanesh Raj" class="profile-img" loading="lazy">
+                <h1 class="animate__animated animate__slideInDown">Dhanesh Raj</h1>
+                <p>Senior Research Associate</p>
+                <a href="mailto:mailid@gmail.com" class="btn">Email me</a>
+                <div class="social-icons">
+                    <a href="https://www.linkedin.com/in/dhaneshraj/" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.facebook.com/imdhaneshraj" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/dhanesh.raj/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://github.com/Dhanesh-raj" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                </div>
                 <div class="scholar-links">
                     <a href="https://scholar.google.com/citations?user=CSB7DU0AAAAJ" aria-label="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
                     <a href="https://www.researchgate.net/profile/Dhanesh-Raj" aria-label="ResearchGate"><i class="fab fa-researchgate"></i></a>
@@ -59,6 +42,21 @@
                     <a href="./resume.pdf" class="btn glow">Resume</a>
                     <a href="#portfolio" class="btn glow">Portfolio</a>
                 </div>
+                <div class="contact-info">
+                    <p>Address:<br>
+                       2nd Floor, Center for Wireless Networks and Applications<br>
+                       Amrita Vishwa Vidyapeetham<br>
+                       Amritapuri Campus</p>
+                    <p>Email:<br>
+                       <a href="mailto:dhaneshraj@am.amrita.edu">dhaneshraj@am.amrita.edu</a><br>
+                       <a href="mailto:dhaneshraj@ieee.org">dhaneshraj@ieee.org</a></p>
+                    <p>Phone Number:<br>
+                       +91 9846309356</p>
+                </div>
+            </div>
+            <div class="intro-right">
+                <h2>About Me</h2>
+                <p>Currently pursuing my Ph.D. in Computer Engineering under Dr. Maneesha V Ramesh with research interests in wireless networks and pervasive computing, specifically Quality of Service (QoS) in marine 5G heterogeneous networks.</p>
                 <section id="experience">
                     <h2>Experience</h2>
                     <ul>
@@ -99,6 +97,6 @@
         <p>&copy; 2024 Dhanesh Raj All Rights Reserved.</p>
     </footer>
 
-    <script defer src="script.js"></script>
+    <script defer src="script.min.js"></script> <!-- Minified JS -->
 </body>
 </html>
