--- a/index.html
+++ b/index.html
@@ -25,24 +25,24 @@
             <div class="intro-left">
                 <img src="profile.jpg" alt="Profile Picture of Dhanesh Raj" class="profile-img" loading="lazy">
                 <h1 class="animate__animated animate__slideInDown">Dhanesh Raj</h1>
-                <p>Senior Research Associate</p>
-                <a href="mailto:mailid@gmail.com" class="btn">Email me</a>
-                <div class="social-icons">
+                <p class="animate__animated animate__fadeInUp">Senior Research Associate</p>
+                <a href="mailto:mailid@gmail.com" class="btn animate__animated animate__fadeInUp">Email me</a>
+                <div class="social-icons animate__animated animate__fadeInUp">
                     <a href="https://www.linkedin.com/in/dhaneshraj/" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     <a href="https://www.facebook.com/imdhaneshraj" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
                     <a href="https://www.instagram.com/dhanesh.raj/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="https://github.com/Dhanesh-raj" aria-label="GitHub"><i class="fab fa-github"></i></a>
                 </div>
-                <div class="scholar-links">
+                <div class="scholar-links animate__animated animate__fadeInUp">
                     <a href="https://scholar.google.com/citations?user=CSB7DU0AAAAJ" aria-label="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
                     <a href="https://www.researchgate.net/profile/Dhanesh-Raj" aria-label="ResearchGate"><i class="fab fa-researchgate"></i></a>
                     <a href="https://orcid.org/0000-0002-0558-1719" aria-label="ORCID"><i class="fab fa-orcid"></i></a>
                 </div>
-                <div class="resume-portfolio-buttons">
+                <div class="resume-portfolio-buttons animate__animated animate__fadeInUp">
                     <a href="./resume.pdf" class="btn glow">Resume</a>
                     <a href="#portfolio" class="btn glow">Portfolio</a>
                 </div>
-                <div class="contact-info">
+                <div class="contact-info animate__animated animate__fadeInUp">
                     <p>Address:<br>
                        2nd Floor, Center for Wireless Networks and Applications<br>
                        Amrita Vishwa Vidyapeetham<br>
@@ -54,7 +54,7 @@
                        +91 9846309356</p>
                 </div>
             </div>
-            <div class="intro-right">
+            <div class="intro-right animate__animated animate__fadeIn">
                 <h2>About Me</h2>
                 <p>Currently pursuing my Ph.D. in Computer Engineering under Dr. Maneesha V Ramesh with research interests in wireless networks and pervasive computing, specifically Quality of Service (QoS) in marine 5G heterogeneous networks.</p>
                 <section id="experience">
