--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Ariadne Snyder</title>
+    <title>Projects - Dhanesh Raj</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -27,10 +27,10 @@
     <footer>
         <p>&copy; 2024 Dhanesh Raj. All Rights Reserved.</p>
         <div class="social-media">
-            <a href="https://www.linkedin/dhanesh.raj"><img src="path/to/linkedin-icon.png" alt="LinkedIn"></a>
-            <a href="https://www.facebook/dhanesh.raj"><img src="path/to/facebook-icon.png" alt="Facebook"></a>
-            <a href="https://www.instagram/dhanesh.raj"><img src="path/to/instagram-icon.png" alt="Instagram"></a>
-            <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="path/to/github-icon.png" alt="GitHub"></a>
+            <a href="https://www.linkedin/dhanesh.raj"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+            <a href="https://www.facebook/dhanesh.raj"><img src="facebook-icon.png" alt="Facebook"></a>
+            <a href="https://www.instagram/dhanesh.raj"><img src="instagram-icon.png" alt="Instagram"></a>
+            <a href="https://dhanesh-raj.github.io/dhaneshraj/"><i class="fab fa-github"></i></a>
         </div>
     </footer>
 </body>
