--- a/publicatons.html
+++ b/publicatons.html
@@ -47,10 +47,10 @@
     <footer>
         <p>&copy; 2024 Dhanesh Raj. All Rights Reserved.</p>
         <div class="social-media">
-            <a href="https://www.linkedin/dhanesh.raj"><img src="linkedin-icon.png" alt="LinkedIn"></a>
-            <a href="https://www.facebook/dhanesh.raj"><img src="facebook-icon.png" alt="Facebook"></a>
-            <a href="https://www.instagram/dhanesh.raj"><img src="instagram-icon.png" alt="Instagram"></a>
-            <a href="https://dhanesh-raj.github.io/dhaneshraj/"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/dhaneshraj" target="_blank" rel="noopener noreferrer"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+            <a href="https://www.facebook.com/imdhaneshraj" target="_blank" rel="noopener noreferrer"><img src="facebook-icon.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/dhanesh.raj/" target="_blank" rel="noopener noreferrer"><img src="instagram-icon.png" alt="Instagram"></a>
+            <a href="https://github.com/Dhanesh-raj" target="_blank" rel="noopener noreferrer"><img src="github-icon.png" alt="GitHub"></a>
         </div>
     </footer>
     <script src="script.js"></script>
